[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Assets/crossair.png" type="Texture" id=2]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 2
period = 89.1
persistence = 0.256

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.721569, 0.898039, 0.760784, 1 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.529412, 0.854902, 0.658824, 1 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 16, 24, 16 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_color = Color( 0.505882, 0.792157, 0.917647, 0.466667 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 8, 16, 8 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 8, 16, 8 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 0.937255, 0.603922, 0.603922, 0.345098 )

[sub_resource type="PlaneMesh" id=14]
size = Vector2( 8, 8 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
albedo_color = Color( 0.6, 0.890196, 0.854902, 0.52549 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Test" type="Spatial" parent="."]
visible = false

[node name="NoiseTest" type="Sprite" parent="Test"]
visible = false
texture = SubResource( 2 )

[node name="LightTest" type="Spatial" parent="Test"]

[node name="DirectionalLightTest" type="DirectionalLight" parent="Test/LightTest"]
transform = Transform( 0.891086, -0.316784, -0.324983, 0.453835, 0.621992, 0.638091, 0, -0.716083, 0.698016, -5.21722, 141.88, 0.545677 )
visible = false
shadow_enabled = true
directional_shadow_max_distance = 459.5

[node name="plane" type="MeshInstance" parent="Test/LightTest"]
transform = Transform( 293.146, 0, 0, 0, 1, 0, 0, 0, 293.146, 0, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="cube" type="MeshInstance" parent="Test/LightTest"]
transform = Transform( 7.75021, 0, 0, 0, 9.91478, 0, 0, 0, 8.97607, 0, 54.9093, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="Test/LightTest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6086, 117, 0 )
shadow_enabled = true
omni_range = 217.985

[node name="Camera" type="Camera" parent="Test"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 100, 200, 0 )
visible = false
far = 8192.0

[node name="CollisionCheckArea" type="Spatial" parent="Test"]
visible = false

[node name="CollisionCheckArea" type="MeshInstance" parent="Test/CollisionCheckArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 12, 8 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="Player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0 )

[node name="PlayerMesh" type="MeshInstance" parent="Player"]
mesh = SubResource( 7 )
skeleton = NodePath("../..")

[node name="FirstPersonCamera" type="Camera" parent="Player/PlayerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
current = true
far = 2000.0

[node name="ThirdPersonCameraRotator" type="Spatial" parent="Player/PlayerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="ThirdPersonCamera" type="Camera" parent="Player/PlayerMesh/ThirdPersonCameraRotator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100 )
far = 2000.0

[node name="Crossair" type="Sprite" parent="Player/PlayerMesh"]
position = Vector2( 400, 250 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="PlayerHitbox" type="MeshInstance" parent="Player"]
visible = false
mesh = SubResource( 8 )
skeleton = NodePath("../PlayerMesh")
material/0 = SubResource( 9 )

[node name="TargetedSurface" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 14 )
material/0 = SubResource( 13 )
